Update portfolio content and enhance styling for improved accessibility and aesthetics

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
     <section id="about" class="section">
       <div class="container">
         <h2 class="section-title">About Me</h2>
-        <p class="lead">I’m a developer student currently studying computer science. I enjoy building front-end applications, learning modern JavaScript frameworks, and contributing to projects that solve real problems. My goal is to become a full-stack developer with a strong focus on accessibility and performance.</p>
+        <p class="lead">I’m a developer student currently studying computer science. I enjoy building front-end applications, learning modern JavaScript frameworks,
+           and contributing to projects that solve real problems. My goal is to become a full-stack developer with a strong focus on accessibility and performance.</p>
         <div class="about-grid">
           <div>
             <h3>Background</h3>
@@ -113,14 +114,16 @@
         <div class="contact-grid">
           <div>
             <h4>Email</h4>
-            <p><a class="link" href="mailto:your.email@example.com">your.email@example.com</a></p>
+            <p><a class="link" href="mailto:chahoubaya6@gmail.com">chahoubaya6@gmail.com</a></p>
           </div>
           <div>
             <h4>Social</h4>
-            <p class="social">
-              <a class="link" href="#" aria-label="GitHub">GitHub</a>
-              <a class="link" href="#" aria-label="LinkedIn">LinkedIn</a>
-              <a class="link" href="#" aria-label="Twitter">Twitter</a>
+              <p class="social">
+              <a class="link" href="https://github.com/aya-chahoub" target="_blank" rel="noopener noreferrer" aria-label="GitHub">aya-chahoub</a>
+              <a class="link" href="https://www.linkedin.com/in/aya-chahoub" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">LinkedIn</a>
+              <a class="link" href="https://twitter.com/AyaChahoub11634" target="_blank" rel="noopener noreferrer" aria-label="Twitter">AyaChahoub11634</a>
+              <a class="link" href="https://www.instagram.com/aya_chahoub" target="_blank" rel="noopener noreferrer" aria-label="Instagram">aya_chahoub</a>
+              <a class="link" href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer" aria-label="Facebook">Ylz Aya</a>
             </p>
           </div>
         </div>
