Update contact form to use Formspree for message handling and enhance styling for better visibility

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
           </aside>
 
           <div class="contact-card contact-form-wrap">
-            <form id="contact-form" class="contact-form" novalidate>
+            <form id="contact-form" class="contact-form" action="https://formspree.io/f/formspree.io/f/xbddrjlehod" method="POST" novalidate>
               <div class="form-row">
                 <label for="name">Name</label>
                 <input id="name" name="name" type="text" placeholder="Your name" required />
@@ -164,8 +164,7 @@
                 <div id="form-status" class="form-status" aria-live="polite"></div>
               </div>
             </form>
-            <p class="muted small">This form uses EmailJS to send messages directly to your Gmail. Replace EmailJS IDs in the script.</p>
->>>>>>> ea71e0b (update projects section with images)
+            <p class="muted small">Messages are sent to your email via Formspree. Replace YOUR_FORM_ID in the form action.</p>
           </div>
         </div>
       </div>
@@ -178,7 +177,6 @@
     </div>
   </footer>
 
-    <script src="https://cdn.emailjs.com/sdk/latest/email.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
